--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "js-cookie": "^3.0.1",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
