--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
