--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "autoprefixer": "^10.4.14",
     "eslint-plugin-storybook": "^0.6.11",
     "postcss": "^8.4.21",
+    "postcss-loader": "^7.2.4",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
     "storybook": "^7.0.6",
+    "storybook-addon-next": "^1.8.0",
     "tailwindcss": "^3.2.7"
   }
 }
