--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,5 +5,6 @@
       "@/*": ["./*"],
       "@/context/*": ["context/*"]
     }
-  }
+  },
+  "include": ["./node_modules/cypress", "cypress/**/*.js"]
 }
