--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.3.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.12.4",
@@ -47,6 +48,8 @@
     "@storybook/react": "^7.0.6",
     "@storybook/testing-library": "^0.0.14-next.2",
     "autoprefixer": "^10.4.14",
+    "cypress": "^12.17.1",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-storybook": "^0.6.11",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.2.4",
