--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@storybook/nextjs": "^7.0.6",
     "@storybook/react": "^7.0.6",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/node": "^20.5.1",
+    "@types/react": "^18.2.20",
     "autoprefixer": "^10.4.14",
     "cypress": "^12.17.1",
     "eslint-plugin-cypress": "^2.13.3",
@@ -57,6 +59,7 @@
     "prettier-plugin-tailwindcss": "^0.2.4",
     "storybook": "^7.0.6",
     "storybook-addon-next": "^1.8.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^5.1.6"
   }
 }
