convert pages and components to typescript

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/nextjs": "^7.0.6",
     "@storybook/react": "^7.0.6",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.5.1",
     "@types/react": "^18.2.20",
