--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.1",
     "@types/react": "^18.2.20",
     "autoprefixer": "^10.4.14",
