--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.1",
     "@types/react": "^18.2.20",
+    "@types/react-click-outside-hook": "^1.0.0",
     "autoprefixer": "^10.4.14",
     "cypress": "^12.17.1",
     "eslint-plugin-cypress": "^2.13.3",
